fixup scrollbar appearing when dragging the outermost thumbnail post and get rid of the ugly outline in something that's not tab-navigatable anyway
--HG--
branch : moe
extra : convert_revision : svn%3A2d28d66d-8d94-df11-8c86-00306ef368cb/trunk/moe%40787

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1521,6 +1521,11 @@ textarea.edit-item { border: none; }
   position: absolute;
   z-index: 2; /* over the regular post images */
   overflow: hidden; /* needed to crop the right edge when overflowing the viewport */
+
+  /* Don't outline when clicked.  It's unnecessary, and it also causes a problem: when the
+   * hover thumb is cropped to fit the screen (see ThumbnailView.prototype.expand_post), the
+   * outline will expand the image by a pixel, causing the scrollbar to appear. */
+  outline: none;
 }
 .browser-thumb-hover-overlay > img {
   vertical-align: top;
